--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,17 @@ ul.topnav li a:hover {
     background-color: #0080ff;
     color: white;
 }
+
+ul.topnav li.dropdownIcon {
+    display: none;
+}
+
+
+/* Media Queries */
+
+@media screen and (max-width: 680px) {
+
+    ul.topnav li:not(:nth-child(1)) {
+        display: none;
+    }
+}
