End of section 5 lecture 35

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,11 @@ input[type="text"] {
         width: 350px;
     }
 
+    .videoContainer iframe {
+        position: relative;
+        width: 100%;
+    }
+
 }
 
 /* End of max-width: 680px media query */
