--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,9 @@ p {
     width: 100%;
 }
 
+* {
+    box-sizing: border-box;
+}
 
 /*      Navbar Styles    */
 
@@ -157,6 +160,9 @@ ul.topnav li.dropdownIcon {
 
 div.box {
     text-align: center;
+    margin: 24px;
+    padding: 36px 24px 40px 24px;
+    border-radius: 3px;
     background-color: chartreuse;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, .15),
     0 2px 3px 0 rgba(0, 0, 0, .1);
@@ -164,6 +170,23 @@ div.box {
 
 div.icon {
     width: 100%;
+}
+
+button {
+    font-size: 32px;
+    font-weight: bold;
+    color: antiquewhite;
+    background-color: blue;
+    padding: 15px 60px;
+    display: block;
+    text-align: center;
+    margin: 5px;
+    border-radius: 7px;
+}
+
+button.learnMore {
+    display: block;
+    margin: auto;
 }
 
 div.leftside-col {
@@ -241,9 +264,19 @@ input[type="text"] {
         text-align: left;
     }
 
-    .col-6 {
+    h1.section2Header {
+        font-size: 50px;
+    }
+
+    .col-6,
+    .col-4 {
         width: 100%;
         margin: 0;
+    }
+
+    div.box {
+        padding: 5px;
+        display: block;
     }
 
     div.leftside-col,
