--- a/styles.css
+++ b/styles.css
@@ -3,57 +3,43 @@
 nav,
 header,
 footer {
-
     display: block;
-
 }
 
 body {
-
     background-color: aqua;
     line-height: 1;
     margin: 0;
-
 }
 
 label {
-
     font-size: 35px;
-    font-weight: bold;
-
+    font-weight: 600;
 }
 
 p {
-    font-size: 30px;
+    font-size: 28px;
     line-height: 1.2;
 }
 
 .container {
-
-    display: block;
     width: 100%;
-    height: 300px;
     margin: auto;
     padding-top: 4%;
     padding-bottom: 4%;
-
 }
 
 .row {
-
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-
 }
 
 .row::after {
-
     display: table;
     clear: both;
     content: "";
-
 }
 
 .col-1 {
@@ -134,10 +120,10 @@ ul.topnav li.topnav-right {
 ul.topnav li a {
     display: block;
     text-decoration: none;
-    min-height: 20px;
+    min-height: 16px;
     text-align: center;
     padding: 14px;
-    text-transform: capitalize;
+    text-transform: uppercase;
     color: #666;
 }
 
@@ -154,15 +140,23 @@ ul.topnav li.dropdownIcon {
 /* Custom styles */
 
 #section_1_gradient {
-    background-image: linear-gradient(to bottom right, red, yellow);
-    height: 400px;
+    background: #076DFF;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#076DFF, #65a5ff);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#076DFF, #65a5ff);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#076DFF, #65a5ff);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#076DFF, #65a5ff);
+    /* Standard syntax */
 }
 
 div.box {
     text-align: center;
     margin: 24px;
     padding: 36px 24px 40px 24px;
-    border-radius: 3px;
+    border-radius: 7px;
     background-color: chartreuse;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, .15),
     0 2px 3px 0 rgba(0, 0, 0, .1);
@@ -191,45 +185,36 @@ button.learnMore {
 
 div.leftside-col {
 
-    margin-left: 15%;
+    margin-left: 30%;
 }
 
 div.rightSide-col {
-    margin-left: 14%;
+    margin-left: 15%;
 }
 
 h1.large {
-
     color: white;
-    font-size: 50px;
+    font-size: 56px;
     margin: 0;
     line-height: 70px;
-
 }
 
 h1.section2Header {
-
     font-size: 65px;
     text-align: center;
-
 }
 
 form h2 {
-
     color: white;
-
 }
 
 input[type="text"] {
-
-    font-size: 30px;
+    font-size: 20px;
     width: 400px;
     min-width: 100px;
     padding: 5px;
     border-radius: 7px;
-
 }
-
 
 /* Media Queries */
 
@@ -281,9 +266,7 @@ input[type="text"] {
 
     div.leftside-col,
     div.rightside-col {
-
-        margin: 10px;
-
+        margin: 15px;
     }
 
     input[type="text"] {
@@ -293,6 +276,8 @@ input[type="text"] {
     .videoContainer iframe {
         position: relative;
         width: 100%;
+        margin: 0;
+        overflow: hidden;
     }
 
 }
