End Section 5 Lecture 38

--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,28 @@ input[type="text"] {
     border-radius: 7px;
 }
 
+footer.footsy {
+    background-color: #666;
+    padding-left: 10%;
+}
+
+footer.footsy h1 {
+    color: #fff;
+    font-size: 35px;
+}
+
+footer.footsy ul {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+footer.footsy ul li {
+    color: #fff;
+    font-size: 22px;
+    line-height: 1.5;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 680px) {
@@ -274,6 +296,11 @@ input[type="text"] {
     .col-4 {
         width: 100%;
         margin: 0;
+    }
+
+    div.mobileStack {
+        display: block;
+        width: 50%;
     }
 
     div.box {
